# exception-utils

./: cabal.project  exception-utils.cabal  flake.nix  hie.yaml
.github/workflows/: ci.yaml
docs/: CHANGELOG.md  Control-Exception-Annotation-Utils.html  Control-Exception-Utils.html  README.md  doc-index.html  doc-index.json  exception-utils.haddock  index.html
docs/src/: Control.Exception.Annotation.Utils.html  Control.Exception.Utils.html
src/Control/Exception/: Utils.hs
src/Control/Exception/Annotation/: Utils.hs
test/unit/: Main.hs
test/unit/Unit/Control/Exception/: Utils.hs
test/unit/Unit/Control/Exception/Annotation/: Utils.hs
tools/: haddock.sh
